# xtal_omap

./: LICENSE.txt  README.md  pyproject.toml
data/: corr_matrix.npy  groups.npz  orientation_matrix.npy  pxl_coordinates.npy
data/NBED_013/: corr_matrix.npy  orientation_matrix.npy  pxl_coordinates.npy
scripts/: Coccolith_Analysis.ipynb  Coccolith_full_analysis.ipynb  Example_OrientationDetection.ipynb  Example_OrientationMapping.ipynb
scripts/.ipynb_checkpoints/: Coccolith_Analysis-checkpoint.ipynb  Coccolith_NBED025_full analysis-checkpoint.ipynb  Coccolith_full analysis-checkpoint.ipynb  Example_OrientationDetection-checkpoint.ipynb  Example_OrientationMapping-checkpoint.ipynb  Example_dataacquisition-checkpoint.ipynb
src/xtal_omap/: __about__.py  __init__.py  __init__.py~  masking_functions.py  stereofunctions.py
src/xtal_omap/.ipynb_checkpoints/: masking_functions-checkpoint.py
src/xtal_omap/classes/: CrystalGroup.py  Dataset.py
