[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
packages = ["src/xtal_omap"]

[project]
name = "xtal_omap"
#dynamic = ["version"]
version = "0.1.0"
description = 'Python classes for automated orientation mapping of 4D-STEM nanodiffraction data'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Rebecca C. Leghziel", email = "rebecca.leghziel@gmail.com" },
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14"
]
  
dependencies = [
"numpy>=1.2.23",
"matplotlib>=3.10.0",
"pandas>=2.0.0",
"scipy>=1.15.2",
"py4DSTEM==0.13.17",
"emdfile>=0.0.15",
]

[project.urls]
Documentation = "https://github.com/LotharHouben/xtal_omap#readme"
Issues = "https://github.com/LotharHouben/xtal_omap/issues"
Source = "https://github.com/LotharHouben/xtal_omap"


